# tiff-visualizer

./: .eslintrc.json  .gitignore  .mocharc.js  .vscodeignore  BACKLOG.md  CACHE_IMPLEMENTATION_COMPLETE.md  CACHING_SYSTEM.md  CHANGELOG.md  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PLAYWRIGHT_SETUP.md  README.md  README_approach1.md  README_approach2.md  README_approach3.md  TESTING.md  THIRD_PARTY_NOTICES.md  agents.md  esbuild.js  extension-browser.webpack.config.js  package-lock.json  package.json  package.nls.json  playwright.config.ts  run-behavioral-tests.js  test-exr-channels.html  tsconfig.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: playwright-tests.yml  release.yml
media/: UTIF.min.js  comparisonPanel.css  comparisonPanel.js  comparisonPanel.ts  decode-worker.js  decode-worker.ts  imagePreview.bundle.js  imagePreview.bundle.js.map  imagePreview.css  imagePreview.js  imagePreview.ts  jsconfig.json  layer-compositor-worker.ts  overlay-panel.css  parse-exr.js  tsconfig.json
media/modules/: colormap-converter.js  colormap-converter.ts  colormap-legend.js  colormaps.js  colormaps.ts  decode-worker-client.js  decode-worker-client.ts  exr-processor.js  exr-processor.ts  hdr-processor.js  hdr-processor.ts  histogram-overlay.js  histogram-overlay.ts  image-blender.js  jxl-processor.js  jxl-processor.ts  layer-compositor-worker-client.ts  layer-compositor.js  layer-compositor.ts  layer-document-writers.ts  (+51 more)
scripts/: build-wasm.sh  bundle-exr-fixed.mjs  bundle-exr.mjs  bundle-parse-exr.js  generate-scientific-test-images.js  setup-playwright.js
src/: binarySizeStatusBarEntry.ts  extension.ts  mediaPreview.ts  ownedStatusBarEntry.ts  videoPreview.ts
test/: OME-TIFF-TEST-DATA.md  behavioral.test.ts  collection-switch-render-test.js  control-behavior-test.js  dicom-dataset-test.js  format-decode-test.js  image-renderer-channels-test.js  integration-cache-test.js  layer-compositor-benchmark.js  layer-compositor-test.js  layered-preview-test.js  layers-panel-tree-test.js  ome-tiff-test.js  overlay-blend-test.js  ppm-decode-test.js  runTests.ts  scientific-formats-test.js  simple-behavior-test.js  tiff-multipage-decode-test.js  tiff-sample-format-test.js  verify_gamma_optimization.mjs  view-cache-test.js  visualization-test.js  wasm-tiff-decode-test.js
test-samples/: bigtiff_deflate_tiled.tif  bigtiff_u16.tif  binary-test.pbm  binary-test.pgm  ccitt_g3.tif  ccitt_g4.tif  ccitt_g4_orientation4.tif  ccitt_mh_strip_1.tif  ccitt_mh_strip_1_ref.tif  ccitt_mh_strip_2.tif  ccitt_mh_strip_2_ref.tif  ccitt_mh_strip_3.tif  ccitt_mh_strip_3_ref.tif  ccitt_none.tif  cmyk.tif  gray_u32.tif  jpeg_ycbcr.tif  jpeg_ycbcr_color.tif  jpeg_ycbcr_color_orientation4.tif  jpeg_ycbcr_color_ref.tif  multipage_description_only.tif  multipage_rgb_depth_mask.tif  npy_f32_gray.npy  npy_u16_gray.npy  npy_u8_rgb.npy  npz_f32.npz  orientation-test.pgm  orientation-test.ppm  orientation_tag1.tif  orientation_tag2.tif  orientation_tag3.tif  orientation_tag4.tif  orientation_tag5.tif  orientation_tag6.tif  orientation_tag7.tif  orientation_tag8.tif  palette.tif  pfm_color.pfm  pfm_gray.pfm  pred_ref_f32.tif  (+13 more)
wasm/tiff-decoder/: Cargo.toml
wasm/tiff-decoder/src/: lib.rs
(+67 files in other folders)
