[package]
name = "tiff-wasm"
version = "0.1.0"
edition = "2021"
description = "Fast TIFF decoder for WebAssembly"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
tiff = "0.10.3"
console_error_panic_hook = { version = "0.1.6", optional = true }
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
# Optimize for speed, not size
opt-level = 3
lto = true
codegen-units = 1
